WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305269
[subpixel-inline-layout] Fix imported/w3c/web-platform-tests/css/css-pseudo/marker-line-height.html
https://bugs.webkit.org/show_bug.cgi?id=305269
Summary
[subpixel-inline-layout] Fix imported/w3c/web-platform-tests/css/css-pseudo/m...
alan
Reported
2026-01-10 08:12:30 PST
ssia
Attachments
[fast-cq]Patch
(2.36 KB, patch)
2026-01-10 08:15 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2026-01-10 08:15:23 PST
Created
attachment 477961
[details]
[fast-cq]Patch
EWS
Comment 2
2026-01-12 07:56:22 PST
Committed
305463@main
(37220de5fb40): <
https://commits.webkit.org/305463@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 477961
[details]
.
Radar WebKit Bug Importer
Comment 3
2026-01-12 07:57:13 PST
<
rdar://problem/167989803
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug