[subpixel-inline-layout] Fix imported/w3c/web-platform-tests/css/css-pseudo/marker-line-height.html https://bugs.webkit.org/show_bug.cgi?id=305269

Reviewed by Antti Koivisto.

Let's not (implicit) floor marker layout bound values.
(They are either fractional values -when subpixel is enabled, or explicitly (integral) snapped RenderListMarker::layoutBoundForTextContent)

* Source/WebCore/layout/layouttree/LayoutElementBox.h:
(WebCore::Layout::ElementBox::setListMarkerLayoutBounds):
(WebCore::Layout::ElementBox::layoutBoundsForListMarker const):

Canonical link: https://commits.webkit.org/305463@main